--- a/bank_automat/mainwindow.ui
+++ b/bank_automat/mainwindow.ui
@@ -545,6 +545,7 @@ color : black; </string>
        </layout>
       </widget>
       <widget class="QWidget" name="page_2"/>
+      <widget class="QWidget" name="page_3"/>
      </widget>
     </item>
    </layout>
