update, no comments yet

--- a/bank_automat/resources.qrc
+++ b/bank_automat/resources.qrc
@@ -2,4 +2,5 @@
     <qresource prefix="/fonts">
         <file alias="SquadaOne">SquadaOne-Regular.ttf</file>
     </qresource>
+    <qresource prefix="/styles"/>
 </RCC>
