--- a/bank_automat/saldopage.ui
+++ b/bank_automat/saldopage.ui
@@ -48,8 +48,8 @@ QLabel:focus
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>90</y>
+     <x>340</x>
+     <y>120</y>
      <width>221</width>
      <height>41</height>
     </rect>
@@ -67,8 +67,8 @@ QLabel:focus
   <widget class="QPushButton" name="Btn_Takaisin">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>430</y>
+     <x>350</x>
+     <y>360</y>
      <width>211</width>
      <height>31</height>
     </rect>
@@ -84,8 +84,8 @@ background-color: rgb(255, 255, 255);</string>
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>570</x>
-     <y>130</y>
+     <x>580</x>
+     <y>160</y>
      <width>61</width>
      <height>41</height>
     </rect>
@@ -100,28 +100,11 @@ background-color: rgb(255, 255, 255);</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="Btn_Debit">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>200</y>
-     <width>211</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">selection-color: rgb(0, 170, 255);
-background-color: lightblue;</string>
-   </property>
-   <property name="text">
-    <string>DEBIT</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="Label_Saldo">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>130</y>
+     <x>320</x>
+     <y>160</y>
      <width>261</width>
      <height>41</height>
     </rect>
@@ -167,22 +150,52 @@ color : gray;</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="Btn_Credit">
+  <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>250</y>
-     <width>211</width>
-     <height>31</height>
+     <x>320</x>
+     <y>210</y>
+     <width>261</width>
+     <height>81</height>
     </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">selection-color: rgb(0, 170, 255);
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QPushButton" name="Btn_Debit">
+      <property name="styleSheet">
+       <string notr="true">selection-color: rgb(0, 170, 255);
+background-color: lightblue;</string>
+      </property>
+      <property name="text">
+       <string>DEBIT</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="Btn_Credit">
+      <property name="styleSheet">
+       <string notr="true">selection-color: rgb(0, 170, 255);
 background-color: lightgreen;</string>
-   </property>
-   <property name="text">
-    <string>CREDIT</string>
-   </property>
+      </property>
+      <property name="text">
+       <string>CREDIT</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
