--- a/bank_automat/mainwindow.ui
+++ b/bank_automat/mainwindow.ui
@@ -87,7 +87,7 @@ QLabel:focus
 }</string>
     </property>
     <property name="currentIndex">
-     <number>5</number>
+     <number>6</number>
     </property>
     <widget class="LoginPage" name="loginPage"/>
     <widget class="MenuPage" name="menuPage"/>
@@ -95,6 +95,7 @@ QLabel:focus
     <widget class="WithdrawPage" name="withdrawPage"/>
     <widget class="TransactPage" name="transactPage"/>
     <widget class="PayCreditPage" name="payCreditPage"/>
+    <widget class="InfoPage" name="infoPage"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -143,6 +144,12 @@ QLabel:focus
    <class>PayCreditPage</class>
    <extends>QWidget</extends>
    <header>paycreditpage.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>InfoPage</class>
+   <extends>QWidget</extends>
+   <header>infopage.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
