--- a/bank_automat/paycreditpage.ui
+++ b/bank_automat/paycreditpage.ui
@@ -46,9 +46,9 @@ QLabel:focus
   <widget class="QPushButton" name="Btn_Takaisin">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>400</y>
-     <width>121</width>
+     <x>100</x>
+     <y>500</y>
+     <width>261</width>
      <height>31</height>
     </rect>
    </property>
@@ -71,7 +71,7 @@ background-color: rgb(255, 255, 255);</string>
    </property>
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="2" column="2">
-     <widget class="QPushButton" name="Btn_20">
+     <widget class="QPushButton" name="Btn_8">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -99,7 +99,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="1" column="2">
-     <widget class="QPushButton" name="Btn_21">
+     <widget class="QPushButton" name="Btn_5">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -127,7 +127,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="2" column="3">
-     <widget class="QPushButton" name="Btn_22">
+     <widget class="QPushButton" name="Btn_9">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -155,7 +155,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QPushButton" name="Btn_23">
+     <widget class="QPushButton" name="Btn_4">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -183,7 +183,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="0" column="2">
-     <widget class="QPushButton" name="Btn_24">
+     <widget class="QPushButton" name="Btn_2">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -211,7 +211,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QPushButton" name="Btn_25">
+     <widget class="QPushButton" name="Btn_1">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -239,7 +239,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="0" column="3">
-     <widget class="QPushButton" name="Btn_26">
+     <widget class="QPushButton" name="Btn_3">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -267,7 +267,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="1" column="3">
-     <widget class="QPushButton" name="Btn_27">
+     <widget class="QPushButton" name="Btn_6">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -295,7 +295,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="2" column="1">
-     <widget class="QPushButton" name="Btn_28">
+     <widget class="QPushButton" name="Btn_7">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -323,7 +323,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="3" column="2">
-     <widget class="QPushButton" name="Btn_29">
+     <widget class="QPushButton" name="Btn_0">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -351,7 +351,7 @@ background-color: rgb(255, 255, 255);</string>
      </widget>
     </item>
     <item row="3" column="1">
-     <widget class="QPushButton" name="Btn_STOP_3">
+     <widget class="QPushButton" name="Btn_STOP">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
         <horstretch>0</horstretch>
@@ -380,12 +380,12 @@ background-color: rgb(255, 255, 255);</string>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="payCredit">
+  <widget class="QPushButton" name="Btn_PayCredit">
    <property name="geometry">
     <rect>
-     <x>680</x>
+     <x>530</x>
      <y>400</y>
-     <width>121</width>
+     <width>271</width>
      <height>31</height>
     </rect>
    </property>
@@ -398,7 +398,7 @@ background-color: rgb(255, 255, 255);</string>
     <string>MAKSA</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="insert_20euros">
+  <widget class="QPushButton" name="Btn_InsertEuros1">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -420,7 +420,7 @@ background-color:white;
     <string>20€</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="insert_50euros">
+  <widget class="QPushButton" name="Btn_InsertEuros3">
    <property name="geometry">
     <rect>
      <x>290</x>
@@ -458,7 +458,7 @@ background-color:white;
     <string>SYÖTÄ MAKSETTAVA SUMMA</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="insert_40euros">
+  <widget class="QPushButton" name="Btn_InsertEuros2">
    <property name="geometry">
     <rect>
      <x>190</x>
@@ -480,7 +480,7 @@ background-color:white;
     <string>40€</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="insert_150euros">
+  <widget class="QPushButton" name="Btn_InsertEuros6">
    <property name="geometry">
     <rect>
      <x>290</x>
@@ -502,7 +502,7 @@ background-color:white;
     <string>150€</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="insert_80euros">
+  <widget class="QPushButton" name="Btn_InsertEuros4">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -524,26 +524,7 @@ background-color:white;
     <string>80€</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="insert_Credit_Amount">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>90</y>
-     <width>291</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color : white; 
-color : gray;
-	font: 16pt &quot;Maiandra GD&quot;;
-	border-style: solid;
-	border-color: black;
-	border-width: 2px;
-	border-radius: 5px;</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="insert_100euros">
+  <widget class="QPushButton" name="Btn_InsertEuros5">
    <property name="geometry">
     <rect>
      <x>190</x>
@@ -593,13 +574,63 @@ background-color:white;
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="Label_Gredit_Saldo">
+  <widget class="QLabel" name="Label_CreditSaldo">
    <property name="geometry">
     <rect>
      <x>100</x>
      <y>370</y>
      <width>261</width>
      <height>41</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>0</width>
+     <height>0</height>
+    </size>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>280</width>
+     <height>60</height>
+    </size>
+   </property>
+   <property name="baseSize">
+    <size>
+     <width>280</width>
+     <height>60</height>
+    </size>
+   </property>
+   <property name="mouseTracking">
+    <bool>false</bool>
+   </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color : white; 
+color : red;</string>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="frameShadow">
+    <enum>QFrame::Sunken</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Label_Amount">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>80</y>
+     <width>280</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="minimumSize">
@@ -635,6 +666,25 @@ color : gray;</string>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Sunken</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Label_Error">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>430</y>
+     <width>381</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <property name="text">
     <string/>
